# Chrome-Lens-OCR

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  chrome_lens_ocr.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pre-commit.yml
Chrome-Lens-CLI/: wrapper.py
chrome_lens_ocr/: api.py  constants.py  exceptions.py
chrome_lens_ocr/core/: image_processor.py  protobuf_builder.py  request_handler.py
chrome_lens_ocr/utils/: config_manager.py  general.py  lens_betterproto.py
